[gd_scene load_steps=35 format=2]

[ext_resource path="res://scenes/battle_camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/battle/battle.gd" type="Script" id=2]
[ext_resource path="res://assets/moon.png" type="Texture" id=5]
[ext_resource path="res://fonts/menus.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/bg/battle_bg.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.133333, 0.133333, 0.133333, 0.607843 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.196078, 0.333333, 0.376471, 1 )

[sub_resource type="StyleBoxFlat" id=74]
bg_color = Color( 0.0941176, 0.305882, 0.376471, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.211765, 0.454902, 0.533333, 1 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.211765, 0.454902, 0.533333, 1 )

[sub_resource type="StyleBoxFlat" id=73]
bg_color = Color( 0.207843, 0.423529, 0.490196, 1 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.286275, 0.501961, 0.572549, 1 )

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.286275, 0.501961, 0.572549, 1 )

[sub_resource type="StyleBoxFlat" id=72]
bg_color = Color( 0.240938, 0.436333, 0.501465, 1 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.356863, 0.556863, 0.623529, 1 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.356863, 0.556863, 0.623529, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 0.607843 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 1000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 1100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 5 )
region = Rect2( 1300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 5 )
region = Rect2( 1400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 1500, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=77]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 75 ), SubResource( 76 ), SubResource( 16 ) ],
"loop": true,
"name": "moon",
"speed": 5.0
} ]

[node name="Battle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -1040.0
margin_right = 960.0
margin_bottom = 40.0
texture = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.447059, 0.447059, 0.447059, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyPanel" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -218.0
margin_bottom = 10.0
custom_constants/separation = 10
alignment = 1

[node name="PlayerPanel" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.0
margin_top = 300.0
margin_right = 487.0
margin_bottom = 364.0
rect_min_size = Vector2( 974, 64 )
custom_constants/separation = 100
alignment = 1

[node name="ActionsPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -275.0
margin_bottom = -100.0
custom_styles/panel = SubResource( 3 )

[node name="Actions" type="VBoxContainer" parent="ActionsPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -75.0
margin_right = 150.0
margin_bottom = 75.0

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
margin_right = 150.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( -484, -30.5 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 74 )
custom_styles/normal = SubResource( 6 )
text = "Attack"

[node name="Pass" type="Button" parent="ActionsPanel/Actions"]
margin_top = 51.0
margin_right = 150.0
margin_bottom = 98.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 74 )
custom_styles/normal = SubResource( 6 )
text = "Pass"

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
margin_top = 102.0
margin_right = 150.0
margin_bottom = 150.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 74 )
custom_styles/normal = SubResource( 6 )
text = "Run"

[node name="SkillsPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -275.0
margin_bottom = -100.0
custom_styles/panel = SubResource( 3 )

[node name="Actions" type="VBoxContainer" parent="SkillsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -79.0
margin_right = 75.0
margin_bottom = 79.0

[node name="Skill1" type="Button" parent="SkillsPanel/Actions"]
margin_right = 150.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 11
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 30 )
custom_styles/pressed = SubResource( 73 )
custom_styles/normal = SubResource( 31 )
text = "Skill"

[node name="Skill2" type="Button" parent="SkillsPanel/Actions"]
margin_top = 27.0
margin_right = 150.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 11
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 30 )
custom_styles/pressed = SubResource( 73 )
custom_styles/normal = SubResource( 31 )
text = "Skill"

[node name="Skill3" type="Button" parent="SkillsPanel/Actions"]
margin_top = 54.0
margin_right = 150.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 11
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 30 )
custom_styles/pressed = SubResource( 73 )
custom_styles/normal = SubResource( 31 )
text = "Skill"

[node name="Skill4" type="Button" parent="SkillsPanel/Actions"]
margin_top = 81.0
margin_right = 150.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 11
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 30 )
custom_styles/pressed = SubResource( 73 )
custom_styles/normal = SubResource( 31 )
text = "Skill"

[node name="Skill5" type="Button" parent="SkillsPanel/Actions"]
margin_top = 108.0
margin_right = 150.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 11
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 30 )
custom_styles/pressed = SubResource( 73 )
custom_styles/normal = SubResource( 31 )
text = "Skill"

[node name="ReturnToActions" type="Button" parent="SkillsPanel/Actions"]
margin_top = 135.0
margin_right = 150.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 11
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 30 )
custom_styles/pressed = SubResource( 73 )
custom_styles/normal = SubResource( 31 )
text = "Return"

[node name="TargetPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -275.0
margin_bottom = -100.0
custom_styles/panel = SubResource( 3 )

[node name="Actions" type="VBoxContainer" parent="TargetPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -79.0
margin_right = 75.0
margin_bottom = 79.0

[node name="Target1" type="Button" parent="TargetPanel/Actions"]
margin_right = 150.0
margin_bottom = 23.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 36 )
custom_styles/pressed = SubResource( 72 )
custom_styles/normal = SubResource( 33 )
text = "Target 1"

[node name="Target2" type="Button" parent="TargetPanel/Actions"]
margin_top = 27.0
margin_right = 150.0
margin_bottom = 50.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 36 )
custom_styles/pressed = SubResource( 72 )
custom_styles/normal = SubResource( 35 )
text = "Target 2"

[node name="Target3" type="Button" parent="TargetPanel/Actions"]
margin_top = 54.0
margin_right = 150.0
margin_bottom = 77.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 36 )
custom_styles/pressed = SubResource( 72 )
custom_styles/normal = SubResource( 35 )
text = "Target 3"

[node name="Target4" type="Button" parent="TargetPanel/Actions"]
margin_top = 81.0
margin_right = 150.0
margin_bottom = 104.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 36 )
custom_styles/pressed = SubResource( 72 )
custom_styles/normal = SubResource( 35 )
text = "Target 4"

[node name="Target5" type="Button" parent="TargetPanel/Actions"]
margin_top = 108.0
margin_right = 150.0
margin_bottom = 131.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 36 )
custom_styles/pressed = SubResource( 72 )
custom_styles/normal = SubResource( 35 )
text = "Target 5"

[node name="ReturnToSkills" type="Button" parent="TargetPanel/Actions"]
margin_top = 135.0
margin_right = 150.0
margin_bottom = 158.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 36 )
custom_styles/pressed = SubResource( 72 )
custom_styles/normal = SubResource( 35 )
text = "Return"

[node name="Textbox" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_top = -310.0
margin_right = 201.0
margin_bottom = -270.0
custom_styles/panel = SubResource( 7 )

[node name="Label" type="Label" parent="Textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
text = "Magaru"
align = 1
valign = 1

[node name="MoonPhaseRect" type="ColorRect" parent="."]
margin_left = 34.0
margin_top = -9.0
margin_right = 94.0
margin_bottom = 51.0
rect_min_size = Vector2( 60, 60 )
rect_rotation = 45.0
color = Color( 0.211765, 0.454902, 0.533333, 1 )

[node name="MoonSprite" type="AnimatedSprite" parent="MoonPhaseRect"]
position = Vector2( 30, 30 )
rotation = -0.785398
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 77 )
animation = "moon"

[node name="Camera2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 513, 383 )
current = true

[node name="FPS" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_top = 8.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "FPS: 120"

[node name="Order" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_top = 32.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "ORDER"

[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Pass" to="." method="_on_Pass_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="SkillsPanel/Actions/Skill1" to="." method="_on_Skill1_pressed"]
[connection signal="pressed" from="SkillsPanel/Actions/Skill2" to="." method="_on_Skill2_pressed"]
[connection signal="pressed" from="SkillsPanel/Actions/Skill3" to="." method="_on_Skill3_pressed"]
[connection signal="pressed" from="SkillsPanel/Actions/Skill4" to="." method="_on_Skill4_pressed"]
[connection signal="pressed" from="SkillsPanel/Actions/Skill5" to="." method="_on_Skill5_pressed"]
[connection signal="pressed" from="SkillsPanel/Actions/ReturnToActions" to="." method="_on_ReturnToActions_pressed"]
[connection signal="pressed" from="TargetPanel/Actions/Target1" to="." method="_on_Target1_pressed"]
[connection signal="pressed" from="TargetPanel/Actions/Target2" to="." method="_on_Target2_pressed"]
[connection signal="pressed" from="TargetPanel/Actions/Target3" to="." method="_on_Target3_pressed"]
[connection signal="pressed" from="TargetPanel/Actions/Target4" to="." method="_on_Target4_pressed"]
[connection signal="pressed" from="TargetPanel/Actions/Target5" to="." method="_on_Target5_pressed"]
[connection signal="pressed" from="TargetPanel/Actions/ReturnToSkills" to="." method="_on_ReturnToSkills_pressed"]
